# python-project-structure

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  readme.rst  requirements-dev.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst
src/package_name/: __init__.py
