[metadata]
name = <PARAM: package-name>
version = <PARAM: api_version.major_version.revision_number>
license = MIT
description = <PARAM: Short description>
long_description = file: README.rst
author = <PARAM: Author Surname>
# author_email = optional@email.here

[options]
packages = find:src
package_dir = 
    =src
include_package_data = True
install_requires = 
    numpy
    scikit-learn

[options.extras_require]
test = pytest
dev = 
    pytest
    black